--- a/team1.html
+++ b/team1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Team 1</title>
 </head>
+
 <body>
     <!-- nav-bar -->
     <div class="flex justify-between py-6 mx-20">
@@ -16,23 +18,27 @@
             <a href="index.html" class="text-4xl font-bold logo-font">TheSubMish.io</a>
         </div>
         <div class="flex mx-20 nav-link">
-            <div class="mx-6"><a href="index.html" class="text-xl font-bold">Home</a></div>
-            <div class="mx-6"><a href="about.html" class="text-xl font-bold">About</a></div>
-            <div class="mx-6"><a href="#" class="text-xl font-bold border-b-2 border-black">Team</a>
+            <div class="mx-6"><a href="index.html" class="text-xl font-bold hove">Home</a></div>
+            <div class="mx-6"><a href="about.html" class="text-xl font-bold hove">About</a></div>
+            <div class="mx-6"><a href="#" class="text-xl font-bold hove text-gray-500">Team</a>
                 <ul>
-                    <li class="text-xl font-bold py-1"><a href="team1.html">Team 1</a></li>
-                    <li class="text-xl font-bold py-1"><a href="team2.html">Team 2</a></li>
+                    <li class="text-xl font-bold py-1"><a href="team1.html" class="hove">Team 1</a></li>
+                    <li class="text-xl font-bold py-1"><a href="team2.html" class="hove">Team 2</a></li>
                 </ul>
             </div>
-            <div class="mx-6"><a href="contact.html" class="text-xl font-bold">Contact</a></div>
-            <div class="mx-6"><a href="sign.html" class="text-xl font-bold">Join Us</a></div>
+            <div class="mx-6"><a href="contact.html" class="text-xl font-bold hove">Contact</a></div>
+            <div class="mx-6"><a href="sign.html" class="text-xl font-bold hove">Join Us</a></div>
         </div>
     </div>
     <!-- main body  -->
     <div class="flex justify-between mx-20 my-40" id="about">
         <div class="m-20">
-            <div><h1 class="text-4xl text-gray-500 font-bold">Web Designers</h1></div>
-            <div class="my-2 pr-28"><p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo accusantium eius facere iusto suscipit aspernatur.</p></div>
+            <div>
+                <h1 class="text-4xl text-gray-500 font-bold">Web Designers</h1>
+            </div>
+            <div class="my-2 pr-28">
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Explicabo accusantium eius facere iusto suscipit aspernatur.</p>
+            </div>
             <div class="my-12"><a href="contact.html" class="text-black border border-black rounded-md px-4 py-2 hover:bg-black hover:text-white">Contact Us</a></div>
         </div>
         <div>
@@ -71,7 +77,9 @@
         <div class="m-20 flex justify-evenly">
             <div><img src="image/logo1.png" alt="TheSubMish Logo" class="w-48"></div>
             <div>
-                <div><h1 class="font-bold text-xl">Socials</h1></div>
+                <div>
+                    <h1 class="font-bold text-xl">Socials</h1>
+                </div>
                 <div>
                     <ul>
                         <li class="my-1 w-max flex place-items-center py-1"><img src="image/facebook.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Facebook</a></li>
@@ -81,7 +89,9 @@
                 </div>
             </div>
             <div>
-                <div><h1 class="font-bold text-xl">Quick Links</h1></div>
+                <div>
+                    <h1 class="font-bold text-xl">Quick Links</h1>
+                </div>
                 <div>
                     <ul>
                         <li class="my-1 w-max flex place-items-center py-1"><span class="material-symbols-outlined pr-1">home</span><a href="index.html"> Home</a></li>
@@ -91,7 +101,9 @@
                 </div>
             </div>
             <div>
-                <div><h1 class="font-bold text-xl">Team</h1></div>
+                <div>
+                    <h1 class="font-bold text-xl">Team</h1>
+                </div>
                 <div>
                     <ul>
                         <li class="my-1 w-max flex place-items-center py-1"><span class="material-symbols-outlined pr-1">groups</span><a href="team1.html">Team 1</a></li>
@@ -102,4 +114,5 @@
         </div>
     </div>
 </body>
+
 </html>
