--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Contact Us</title>
 </head>
+
 <body>
     <!-- nav-bar -->
     <div class="flex justify-between py-6 mx-20">
@@ -16,16 +18,16 @@
             <a href="index.html" class="text-4xl font-bold logo-font">TheSubMish.io</a>
         </div>
         <div class="flex mx-20 nav-link">
-            <div class="mx-6"><a href="index.html" class="text-xl font-bold">Home</a></div>
-            <div class="mx-6"><a href="about.html" class="text-xl font-bold">About</a></div>
-            <div class="mx-6"><a href="#" class="text-xl font-bold">Team</a>
+            <div class="mx-6"><a href="index.html" class="text-xl font-bold hove">Home</a></div>
+            <div class="mx-6"><a href="about.html" class="text-xl font-bold hove">About</a></div>
+            <div class="mx-6"><a href="#" class="text-xl font-bold hove">Team</a>
                 <ul>
-                    <li class="text-xl font-bold py-1"><a href="team1.html">Team 1</a></li>
-                    <li class="text-xl font-bold py-1"><a href="team2.html">Team 2</a></li>
+                    <li class="text-xl font-bold py-1"><a href="team1.html" class="hove">Team 1</a></li>
+                    <li class="text-xl font-bold py-1"><a href="team2.html" class="hove">Team 2</a></li>
                 </ul>
             </div>
-            <div class="mx-6"><a href="contact.html" class="text-xl font-bold border-b-2 border-black">Contact</a></div>
-            <div class="mx-6"><a href="sign.html" class="text-xl font-bold">Join Us</a></div>
+            <div class="mx-6"><a href="contact.html" class="text-xl font-bold hove text-gray-500">Contact</a></div>
+            <div class="mx-6"><a href="sign.html" class="text-xl font-bold hove">Join Us</a></div>
         </div>
     </div>
     <!-- main body  -->
@@ -67,16 +69,21 @@
         <div class="m-20 flex justify-evenly">
             <div><img src="image/logo1.png" alt="TheSubMish Logo" class="w-48"></div>
             <div>
-                <div><h1 class="font-bold text-xl">Socials</h1></div>
                 <div>
-                    <ul><li class="my-1 w-max flex place-items-center py-1"><img src="image/facebook.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Facebook</a></li>
+                    <h1 class="font-bold text-xl">Socials</h1>
+                </div>
+                <div>
+                    <ul>
+                        <li class="my-1 w-max flex place-items-center py-1"><img src="image/facebook.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Facebook</a></li>
                         <li class="my-1 w-max flex place-items-center py-1"><img src="image/instagram.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Instagram</a></li>
                         <li class="my-1 w-max flex place-items-center py-1"><img src="image/twitter.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Twitter</a></li>
                     </ul>
                 </div>
             </div>
             <div>
-                <div><h1 class="font-bold text-xl">Quick Links</h1></div>
+                <div>
+                    <h1 class="font-bold text-xl">Quick Links</h1>
+                </div>
                 <div>
                     <ul>
                         <li class="my-1 w-max flex place-items-center py-1"><span class="material-symbols-outlined pr-1">home</span><a href="index.html"> Home</a></li>
@@ -86,7 +93,9 @@
                 </div>
             </div>
             <div>
-                <div><h1 class="font-bold text-xl">Team</h1></div>
+                <div>
+                    <h1 class="font-bold text-xl">Team</h1>
+                </div>
                 <div>
                     <ul>
                         <li class="my-1 w-max flex place-items-center py-1"><span class="material-symbols-outlined pr-1">groups</span><a href="team1.html">Team 1</a></li>
@@ -97,4 +106,5 @@
         </div>
     </div>
 </body>
+
 </html>
