--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
                 <div class="mx-3 xl:mx-6"><a href="#about" class="text-xl font-bold hove">About</a></div>
                 <div class="mx-3 xl:mx-6"><a href="#project" class="text-xl font-bold hove">Projects</a>
                     <ul>
-                        <li class="text-xl font-bold py-1"><a href="team1.html" class="hove">Calculator</a></li>
-                        <li class="text-xl font-bold py-1"><a href="team2.html" class="hove">Vaccine RS</a></li>
+                        <li class="text-xl font-bold py-1"><a href="#project" class="hove">Calculator</a></li>
+                        <li class="text-xl font-bold py-1"><a href="#project" class="hove">Vaccine RS</a></li>
                         <li class="text-lg font-bold py-1"><a href="#project" class="text-blue-500 hover:text-black">More...</a></li>
                     </ul>
                 </div>
