--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <img src="image/hero-img.png" alt="image" class=" px-14">
             </div>
         </div>
-        <div class="p-10 xl:mx-40 xl:pt-20">
+        <div class="px-10 py-14 xl:mx-40 xl:pt-20">
             <div class="py-5">
                 <h1 class="text-2xl sm:text-3xl text-gray-500 font-bold">Let's have a talk</h1>
             </div>
