--- a/Billing System/bill.html
+++ b/Billing System/bill.html
@@ -24,7 +24,7 @@
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/index.html#about" class="text-xl font-bold hove">About</a></div>
                 <div class="mx-3 xl:mx-6"><a href="#" class="text-xl font-bold hove">Projects</a>
                     <ul class="relative sm:absolute">
-                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="/Billing System/index.html" class="hove">Billing System</a></li>
+                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="/Billing System/bill.html" class="hove">Billing System</a></li>
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="/index.html#project" class="hove">Vaccine RS</a></li>
                         <li class="text-lg font-bold py-1" onclick="hide()"><a href="/index.html#project" class="text-blue-500 hover:text-black">More...</a></li>
                     </ul>
