--- a/bill.html
+++ b/bill.html
@@ -20,17 +20,17 @@
         <div>
             <div class="sm:hidden my-1" id="menu" onclick="menu()"><span class="material-symbols-outlined">menu</span></div>
             <div class="hidden sm:flex nav-link" id="menu-items">
-                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/index.html#home" class="text-xl font-bold hove text-gray-500">Home</a></div>
-                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/index.html#about" class="text-xl font-bold hove">About</a></div>
+                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="index.html#home" class="text-xl font-bold hove text-gray-500">Home</a></div>
+                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="index.html#about" class="text-xl font-bold hove">About</a></div>
                 <div class="mx-3 xl:mx-6"><a href="#" class="text-xl font-bold hove">Projects</a>
                     <ul class="relative sm:absolute">
-                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="/Billing System/index.html" class="hove">Billing System</a></li>
-                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="/index.html#project" class="hove">Vaccine RS</a></li>
-                        <li class="text-lg font-bold py-1" onclick="hide()"><a href="/index.html#project" class="text-blue-500 hover:text-black">More...</a></li>
+                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="bill.html" class="hove">Billing System</a></li>
+                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="index.html#project" class="hove">Vaccine RS</a></li>
+                        <li class="text-lg font-bold py-1" onclick="hide()"><a href="index.html#project" class="text-blue-500 hover:text-black">More...</a></li>
                     </ul>
                 </div>
-                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/index.html#contact" class="text-xl font-bold hove">Contact Us</a></div>
-                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/sign.html" class="text-xl font-bold hove">Join Us</a></div>
+                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="index.html#contact" class="text-xl font-bold hove">Contact Us</a></div>
+                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="sign.html" class="text-xl font-bold hove">Join Us</a></div>
             </div>
         </div>
     </div>
