--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
                 </div>
                 <div>
                     <ul>
-                        <li class="my-1 w-max flex place-items-center py-1"><img src="image/facebook.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Facebook</a></li>
-                        <li class="my-1 w-max flex place-items-center py-1"><img src="image/instagram.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Instagram</a></li>
-                        <li class="my-1 w-max flex place-items-center py-1"><img src="image/twitter.jpg" alt="Facbook Logo" class="w-5 mr-2"><a>Twitter</a></li>
+                        <li class="my-1 w-max flex place-items-center py-1"><img src="image/facebook.jpg" alt="Facbook Logo" class="w-5 mr-2"><a href="https://www.facebook.com/profile.php?id=100009664368752" target="_blank">Facebook</a></li>
+                        <li class="my-1 w-max flex place-items-center py-1"><img src="image/instagram.jpg" alt="Instagram Logo" class="w-5 mr-2"><a href="https://www.instagram.com/subodh.mishra_/" target="_blank">Instagram</a></li>
+                        <li class="my-1 w-max flex place-items-center py-1"><img src="image/twitter.jpg" alt="Twitter Logo" class="w-5 mr-2"><a href="https://twitter.com/SubodhM31368083" target="_blank">Twitter</a></li>
                     </ul>
                 </div>
             </div>
