--- a/bill.html
+++ b/bill.html
@@ -20,9 +20,9 @@
         <div>
             <div class="sm:hidden my-1" id="menu" onclick="menu()"><span class="material-symbols-outlined">menu</span></div>
             <div class="hidden sm:flex nav-link" id="menu-items">
-                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/index.html#home" class="text-xl font-bold hove text-gray-500">Home</a></div>
+                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/index.html#home" class="text-xl font-bold hove">Home</a></div>
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="/index.html#about" class="text-xl font-bold hove">About</a></div>
-                <div class="mx-3 xl:mx-6"><a href="#" class="text-xl font-bold hove">Projects</a>
+                <div class="mx-3 xl:mx-6"><a href="" class="text-xl font-bold hove text-gray-500">Projects</a>
                     <ul class="relative sm:absolute">
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="bill.html" class="hove">Billing System</a></li>
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="/index.html#project" class="hove">Vaccine RS</a></li>
@@ -43,17 +43,17 @@
             </div>
             <div class="px-10">
                 <form id="billForm">
-                    <fieldset>
-                        <input type="text" name="item" id="item" placeholder="Item Name" class="border border-black rounded p-2 mb-3 w-full con-inp">
-                    </fieldset>
-                    <fieldset class="flex">
-                        <input type="number" name="quantity" id="quantity" placeholder="Quantity" class="border border-black rounded p-2 mb-3 w-full con-inp">
-                        <input type="number" name="rate" id="rate" placeholder="Rate" class="border border-black rounded p-2 mb-3 w-full con-inp ml-3">
-                    </fieldset>
-                    <fieldset>
-                        <input type="button" class="hover:text-black hover:bg-white border border-black rounded-md px-4 py-2 bg-black text-white" id="submit" value="Submit">
-                        <button type="reset" class="text-black bg-white border border-black rounded-md px-4 py-2 hover:bg-black hover:text-white">Clear</button>
-                    </fieldset>
+                    <div>
+                        <input type="text" name="item" id="item" placeholder="Item Name" class="border border-black rounded p-2 mb-3 w-full con-inp valid">
+                    </div>
+                    <div class="flex">
+                        <input type="number" name="quantity" id="quantity" placeholder="Quantity" class="border border-black rounded p-2 mb-3 w-full con-inp valid">
+                        <input type="number" name="rate" id="rate" placeholder="Rate" class="border border-black rounded p-2 mb-3 w-full con-inp ml-3 valid">
+                    </div>
+                    <div>
+                        <input type="button" class="text-black bg-white border border-black rounded-md px-4 py-2" id="submit" value="Submit">
+                        <button type="reset" class="border border-black rounded-md px-4 py-2 bg-black text-white" id="clear">Clear</button>
+                    </div>
                 </form>
             </div>
         </div>
@@ -78,6 +78,7 @@
         </div>
     </div>
     <script src="js/script.js"></script>
+    <script src="js/bill.js"></script>
 </body>
 
 </html>
