--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="hidden sm:flex nav-link" id="menu-items">
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="#home" class="text-xl font-bold hove text-gray-500">Home</a></div>
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="#about" class="text-xl font-bold hove">About</a></div>
-                <div class="mx-3 xl:mx-6"><a href="#" class="text-xl font-bold hove">Projects</a>
+                <div class="mx-3 xl:mx-6"><a href="" class="text-xl font-bold hove">Projects</a>
                     <ul class="relative sm:absolute">
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="bill.html" class="hove">Billing System</a></li>
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="#project" class="hove">Vaccine RS</a></li>
@@ -122,7 +122,7 @@
             <div class="py-5">
                 <h1 class="text-2xl sm:text-3xl text-gray-500 font-bold">Let's have a talk</h1>
             </div>
-            <form action="#" method="post" onsubmit="return conValid()">
+            <form action="#" onsubmit="return conValid()">
                 <div class="flex">
                     <div class="mr-4 flex-auto">
                         <input type="text" name="fname" id="fname" placeholder="First Name" class="border border-black rounded p-2 mb-3 w-full sm:w-full con-inp">
