--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </ul>
                 </div>
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="#contact" class="text-xl font-bold hove" id="contact">Contact Us</a></div>
-                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="sign.html" class="text-xl font-bold hove border-b-2 border-black">Join Us</a></div>
+                <div class="mx-3 xl:mx-6" onclick="hide()"><a href="sign.html" class="text-xl font-bold hove">Join Us</a></div>
             </div>
         </div>
     </div>
