--- a/bill.html
+++ b/bill.html
@@ -15,7 +15,7 @@
     <!-- NavBar -->
     <div class="flex sticky top-0 bg-white justify-between px-10 lg:px-24 xl:px-40 pt-7 lg:pt-10">
         <div>
-            <a href="#home" class="text-2xl sm:text-3xl xl:text-4xl font-bold logo-font">TheSubMish.io</a>
+            <a href="index.html#home" class="text-2xl sm:text-3xl xl:text-4xl font-bold logo-font">TheSubMish.io</a>
         </div>
         <div>
             <div class="sm:hidden my-1" id="menu" onclick="menu()"><span class="material-symbols-outlined">menu</span></div>
