--- a/sign.html
+++ b/sign.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="css/tailwind.css">
     <title>Sign-Up</title>
 </head>
+
 <body>
     <div class="log-bg h-auto pb-10 lg:flex lg:mx-20 lg:my-20 xl:mx-72 xl:my-24 lg:pb-4">
         <div class="pt-10 w-48 mx-auto lg:my-24">
@@ -20,7 +22,7 @@
                 <p class="text-2xl font-bold rounded-t-md">Sign-Up</p>
             </div>
             <div class="mx-6">
-                <form action="index.html" onsubmit="return signValid()">
+                <form action="index.html" onsubmit="return signUpValid()">
                     <div class="sm:flex ">
                         <input type="text" name="fname" id="fname" placeholder="First Name" class="mb-3 border border-black px-4 py-1 rounded-md w-full sm:w-1/2 sm:mr-5">
                         <input type="text" name="lname" id="lname" placeholder="Last Name" class="mb-3 border border-black px-4 py-1 rounded-md w-full sm:w-1/2">
@@ -37,7 +39,7 @@
                     <div>
                         <input type="password" name="cpassword" id="cpassword" placeholder="Confirm Password" class="mb-3 border border-black px-4 py-1 rounded-md w-full">
                     </div>
-                    <div >
+                    <div>
                         <button type="submit" class="bg-red-500 text-white px-3 py-1 rounded-lg">Sign-Up</button>
                     </div>
                     <div class="pb-5 sm:pb-8">
@@ -50,4 +52,5 @@
     </div>
     <script src="js/script.js"></script>
 </body>
+
 </html>
