--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="hidden sm:flex nav-link" id="menu-items">
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="#home" class="text-xl font-bold hove text-gray-400">Home</a></div>
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="#about" class="text-xl font-bold hove">About</a></div>
-                <div class="mx-3 xl:mx-6"><a class="text-xl font-bold hove" id="project">Projects</a>
+                <div class="mx-3 xl:mx-6"><a class="text-xl font-bold hove">Projects</a>
                     <ul class="relative sm:absolute">
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="bill.html" class="hove">Billing System</a></li>
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="calculator.html" class="hove">Calculator</a></li>
