--- a/index.html
+++ b/index.html
@@ -100,23 +100,23 @@
         </div>
         <div class="py-3 px-10 text-justify sm:pr-20">
             <div class="flex justify-evenly mt-10">
-                <div class="border-2 border-black w-96 h-28 sm:w-60 sm:h-60 mr-4 flip-card">
+                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="image/bill calculator.png" alt="Bill Calculator" id="bill-calculator">
+                            <img src="image/bill calculator.png" alt="Bill Calculator" id="bill-calculator" class="w-96 h-28 sm:w-60 sm:h-60">
                         </div>
-                        <div class="text-center flip-card-back">
+                        <div class="text-center flip-card-back pt-4 sm:pt-20">
                             <p class="text-xl sm:text-2xl font-bold my-2">Billing System</p>
                             <a href="bill.html" target="_blank" class="sm:text-xl font-bold underline text-blue-400">Visit</a>
                         </div>
                     </div>
                 </div>
-                <div class="border-2 border-black w-96 h-28 sm:w-60 sm:h-60 mr-4 flip-card">
+                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card">
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
-                            <img src="image/calculator.png" alt="Calculator" id="calculator">
+                            <img src="image/calculator.png" alt="Calculator" id="calculator" class="w-96 h-32 sm:w-60 sm:h-60">
                         </div>
-                        <div class="text-center flip-card-back">
+                        <div class="text-center flip-card-back pt-6 sm:pt-20">
                             <p class="text-xl sm:text-2xl font-bold my-2">Calculator</p>
                             <a href="calculator.html" target="_blank" class="sm:text-xl font-bold underline text-blue-400">Visit</a>
                         </div>
