--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         <div class="py-3 px-10 text-justify sm:pr-20">
             <div class="flex justify-evenly mt-10">
-                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card">
+                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card" flip-card>
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <img src="image/bill calculator.png" alt="Bill Calculator" id="bill-calculator" class="w-96 h-28 sm:w-60 sm:h-60">
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card">
+                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card" flip-card>
                     <div class="flip-card-inner">
                         <div class="flip-card-front">
                             <img src="image/calculator.png" alt="Calculator" id="calculator" class="w-96 h-32 sm:w-60 sm:h-60">
