--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <div class="mx-3 xl:mx-6" onclick="hide()"><a href="#about" class="text-xl font-bold hove" id="nav-about">About</a></div>
                 <div class="mx-3 xl:mx-6"><a class="text-xl font-bold hove" id="nav-project">Projects</a>
                     <ul class="relative sm:absolute">
-                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="bill.html" class="hove">Billing System</a></li>
+                        <li class="text-xl font-bold py-1" onclick="hide()"><a href="bill.html" class="hove">Bill System</a></li>
                         <li class="text-xl font-bold py-1" onclick="hide()"><a href="calculator.html" class="hove">Calculator</a></li>
                         <li class="text-lg font-bold py-1" onclick="hide()"><a href="#project" class="text-blue-500 hover:text-black">More...</a></li>
                     </ul>
@@ -100,26 +100,22 @@
         </div>
         <div class="py-3 px-10 text-justify sm:pr-20">
             <div class="flex justify-evenly mt-10">
-                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card" flip-card>
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="image/bill calculator.png" alt="Bill Calculator" id="bill-calculator" class="w-96 h-28 sm:w-60 sm:h-60">
-                        </div>
-                        <div class="text-center flip-card-back pt-4 sm:pt-20">
-                            <p class="text-xl sm:text-2xl font-bold my-2">Billing System</p>
-                            <a href="bill.html" target="_blank" class="sm:text-xl font-bold underline text-blue-400">Visit</a>
-                        </div>
+                <div class="card border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4">
+                    <div>
+                        <img src="image/bill calculator.png" alt="Bill Calculator" id="bill-calculator" class="w-96 h-24 sm:w-60 sm:h-52">
+                    </div>
+                    <div class="sm:w-60 text-center">
+                        <a href="bill.html" target="_blank" class="sm:text-xl font-bold show">Bill System</a>
+                        <a href="bill.html" target="_blank" class="sm:text-xl font-bold underline hidden hide">Visit</a>
                     </div>
                 </div>
-                <div class="border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4 flip-card" flip-card>
-                    <div class="flip-card-inner">
-                        <div class="flip-card-front">
-                            <img src="image/calculator.png" alt="Calculator" id="calculator" class="w-96 h-32 sm:w-60 sm:h-60">
-                        </div>
-                        <div class="text-center flip-card-back pt-6 sm:pt-20">
-                            <p class="text-xl sm:text-2xl font-bold my-2">Calculator</p>
-                            <a href="calculator.html" target="_blank" class="sm:text-xl font-bold underline text-blue-400">Visit</a>
-                        </div>
+                <div class="card border-2 border-black w-96 h-32 sm:w-60 sm:h-64 mr-4">
+                    <div>
+                        <img src="image/calculator.png" alt="Calculator" id="calculator" class="w-96 h-24 sm:w-60 sm:h-52">
+                    </div>
+                    <div class="sm:w-60 text-center">
+                        <a href="calculator.html" target="_blank" class="sm:text-xl font-bold show">Calculator</a>
+                        <a href="calculator.html" target="_blank" class="sm:text-xl font-bold underline hidden hide">Visit</a>
                     </div>
                 </div>
             </div>
